<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Hardware" Id="{72ad6a3a-e035-4ae1-b9b7-c68bdd948b2f}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	robotLeft, robotRight : Robot;
	toolStorageLeft, toolStorageRight : A21ToolStorage;
	
	skidLeft, skidRight : MaterialStorage;
	
	stagingTableLeft, stagingTableRight : WoodBunkTable;
	magazineLeft, magazineRight : MaterialStorage;
	
	strapper : StrapMachine;
	
	horizontalDriveLeft, horizontalDriveRight : AirPiston;
	verticalDriveLeft, verticalDriveRight : ClearLinkMC;
	insertionBottom : SimplePiston;
	
	topSuction : ARRAY[1..3] OF SuctionPad;
	leftSuction : ARRAY[1..4] OF SuctionPad;
	rightSuction : ARRAY[1..4] OF SuctionPad; 
	bottomSuction : ARRAY[1..2] OF SuctionPad;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>